Fix scrollbars (#33)

--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -14,6 +14,10 @@ body,
 .inner {
 	height: 100%;
 	width: 100%;
+	overflow: hidden;
+}
+
+.inner {
 	overflow-x: hidden;
 	overflow-y: scroll;
 	-webkit-overflow-scrolling: touch;
@@ -66,24 +70,27 @@ body {
 	font-weight: 200;
 }
 
-h2, h3, h4 {
+h2,
+h3,
+h4 {
 	text-transform: uppercase;
 	font-family: 'IBM Plex Sans Condensed', 'IBM Plex Sans', sans-serif;
 	font-weight: 700;
 }
 
-h5, h6 {
+h5,
+h6 {
 	font-family: 'IBM Plex Sans Condensed', 'IBM Plex Sans', sans-serif;
 	font-style: italic;
 }
 
 a {
-  background: linear-gradient(to bottom, #BF0222 0%, #BF0222 100%);
-  background-position: 0 100%;
-  background-repeat: repeat-x;
+	background: linear-gradient(to bottom, #BF0222 0%, #BF0222 100%);
+	background-position: 0 100%;
+	background-repeat: repeat-x;
 	background-size: 3px 3px;
 	font-weight: 600;
-  color: #000;
+	color: #000;
 	text-decoration: none;
 	-webkit-transition: all 0.3s ease-in-out;
 	transition: all 0.3s ease-in-out;
@@ -91,31 +98,31 @@ a {
 
 a:hover {
 	color: #000;
-  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg id='squiggle-link' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns:ev='http://www.w3.org/2001/xml-events' viewBox='0 0 20 4'%3E%3Cstyle type='text/css'%3E.squiggle{animation:shift .3s linear infinite;}@keyframes shift {from {transform:translateX(0);}to {transform:translateX(-20px);}}%3C/style%3E%3Cpath fill='none' stroke='%23bf0222' stroke-width='2' class='squiggle' d='M0,3.5 c 5,0,5,-3,10,-3 s 5,3,10,3 c 5,0,5,-3,10,-3 s 5,3,10,3'/%3E%3C/svg%3E");
-  background-position: 0 100%;
-  background-size: auto 6px;
-  background-repeat: repeat-x;
-  text-decoration: none;
+	background-image: url("data:image/svg+xml;charset=utf8,%3Csvg id='squiggle-link' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns:ev='http://www.w3.org/2001/xml-events' viewBox='0 0 20 4'%3E%3Cstyle type='text/css'%3E.squiggle{animation:shift .3s linear infinite;}@keyframes shift {from {transform:translateX(0);}to {transform:translateX(-20px);}}%3C/style%3E%3Cpath fill='none' stroke='%23bf0222' stroke-width='2' class='squiggle' d='M0,3.5 c 5,0,5,-3,10,-3 s 5,3,10,3 c 5,0,5,-3,10,-3 s 5,3,10,3'/%3E%3C/svg%3E");
+	background-position: 0 100%;
+	background-size: auto 6px;
+	background-repeat: repeat-x;
+	text-decoration: none;
 }
 
 a:visited {
-  background: linear-gradient(to bottom, #4d0099 0%, #4d0099 100%);
-  background-position: 0 100%;
-  background-repeat: repeat-x;
+	background: linear-gradient(to bottom, #4d0099 0%, #4d0099 100%);
+	background-position: 0 100%;
+	background-repeat: repeat-x;
 	background-size: 3px 3px;
 	font-weight: 600;
-  color: #000;
+	color: #000;
 	text-decoration: none;
 	transition: all ease-in-out 0.5s;
 }
 
 a:visited:hover {
 	color: #000;
-  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg id='squiggle-link' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns:ev='http://www.w3.org/2001/xml-events' viewBox='0 0 20 4'%3E%3Cstyle type='text/css'%3E.squiggle{animation:shift .3s linear infinite;}@keyframes shift {from {transform:translateX(0);}to {transform:translateX(-20px);}}%3C/style%3E%3Cpath fill='none' stroke='%234d0099' stroke-width='2' class='squiggle' d='M0,3.5 c 5,0,5,-3,10,-3 s 5,3,10,3 c 5,0,5,-3,10,-3 s 5,3,10,3'/%3E%3C/svg%3E");
-  background-position: 0 100%;
-  background-size: auto 6px;
-  background-repeat: repeat-x;
-  text-decoration: none;
+	background-image: url("data:image/svg+xml;charset=utf8,%3Csvg id='squiggle-link' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns:ev='http://www.w3.org/2001/xml-events' viewBox='0 0 20 4'%3E%3Cstyle type='text/css'%3E.squiggle{animation:shift .3s linear infinite;}@keyframes shift {from {transform:translateX(0);}to {transform:translateX(-20px);}}%3C/style%3E%3Cpath fill='none' stroke='%234d0099' stroke-width='2' class='squiggle' d='M0,3.5 c 5,0,5,-3,10,-3 s 5,3,10,3 c 5,0,5,-3,10,-3 s 5,3,10,3'/%3E%3C/svg%3E");
+	background-position: 0 100%;
+	background-size: auto 6px;
+	background-repeat: repeat-x;
+	text-decoration: none;
 }
 
 @media(min-width: 1350px) {
@@ -310,10 +317,12 @@ a:visited:hover {
 		font-size: 2rem;
 		padding-left: 9%;
 		transform: translate(-50%, -50%);
-		min-height: 100%;  /* Fallback for browsers do NOT support vh unit */
-  	min-height: 100vh; /* These two lines are counted as one :-)       */
-  	display: flex;
-  	align-items: center;
+		min-height: 100%;
+		/* Fallback for browsers do NOT support vh unit */
+		min-height: 100vh;
+		/* These two lines are counted as one :-)       */
+		display: flex;
+		align-items: center;
 	}
 
 	.menu ul li a {
@@ -351,30 +360,30 @@ a:visited:hover {
 }
 
 #nav-icon {
-  width: 60px;
-  height: 45px;
-  position: absolute;
-  margin: 25px;
+	width: 60px;
+	height: 45px;
+	position: absolute;
+	margin: 25px;
 	z-index: 5;
-  -webkit-transition: .5s ease-in-out;
-  -moz-transition: .5s ease-in-out;
-  -o-transition: .5s ease-in-out;
-  transition: .5s ease-in-out;
-  cursor: pointer;
+	-webkit-transition: .5s ease-in-out;
+	-moz-transition: .5s ease-in-out;
+	-o-transition: .5s ease-in-out;
+	transition: .5s ease-in-out;
+	cursor: pointer;
 }
 
 #nav-icon span {
-  display: block;
-  position: absolute;
-  height: 5px;
-  width: 100%;
-  background: #fff;
-  opacity: 1;
-  left: 0;
-  -webkit-transition: .25s ease-in-out;
-  -moz-transition: .25s ease-in-out;
-  -o-transition: .25s ease-in-out;
-  transition: .25s ease-in-out;
+	display: block;
+	position: absolute;
+	height: 5px;
+	width: 100%;
+	background: #fff;
+	opacity: 1;
+	left: 0;
+	-webkit-transition: .25s ease-in-out;
+	-moz-transition: .25s ease-in-out;
+	-o-transition: .25s ease-in-out;
+	transition: .25s ease-in-out;
 }
 
 #nav-icon.nav-icon-about span {
@@ -382,36 +391,36 @@ a:visited:hover {
 }
 
 #nav-icon span:nth-child(1) {
-  top: 0px;
+	top: 0px;
 }
 
 #nav-icon span:nth-child(2) {
-  top: 15px;
+	top: 15px;
 }
 
 #nav-icon span:nth-child(3) {
-  top: 30px;
+	top: 30px;
 }
 
 #nav-icon.open span:nth-child(1) {
-  top: 18px;
-  -webkit-transform: rotate(135deg);
-  -moz-transform: rotate(135deg);
-  -o-transform: rotate(135deg);
-  transform: rotate(135deg);
+	top: 18px;
+	-webkit-transform: rotate(135deg);
+	-moz-transform: rotate(135deg);
+	-o-transform: rotate(135deg);
+	transform: rotate(135deg);
 }
 
 #nav-icon.open span:nth-child(2) {
-  opacity: 0;
-  left: -60px;
+	opacity: 0;
+	left: -60px;
 }
 
 #nav-icon.open span:nth-child(3) {
-  top: 18px;
-  -webkit-transform: rotate(-135deg);
-  -moz-transform: rotate(-135deg);
-  -o-transform: rotate(-135deg);
-  transform: rotate(-135deg);
+	top: 18px;
+	-webkit-transform: rotate(-135deg);
+	-moz-transform: rotate(-135deg);
+	-o-transform: rotate(-135deg);
+	transform: rotate(-135deg);
 }
 
 .color-block-1 {
